crates/rstest-bdd-macros/tests/fixtures/step_tuple_pattern.stderr
error: unsupported pattern `(x, y)`; expected a single identifier
 --> tests/fixtures/step_tuple_pattern.rs:8:20
  |
8 | fn step_with_tuple((x, y): (i32, i32)) {}
  |                    ^^^^^^
